--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,13 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.0",
+        "php": "^7.2",
         "psr/http-factory": "^1.0",
         "monolog/monolog": "^1.23",
         "guzzlehttp/guzzle": "^6.3.3",
         "cache/filesystem-adapter": "^1.0",
         "cache/apcu-adapter": "1.0.0",
-        "jms/serializer": "^1.13",
-        "brandonlamb/php-hal": "dev-master"
+        "jms/serializer": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^7",
