--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "israeldominguez/druid-rest-api",
+    "name": "dru-id/druid-rest-api",
     "description": "Druid Rest Api",
     "type": "library",
     "license": "MIT",
